SERVER-19835 change SubplanStage to skip creation of a plan cache entry in edge cases

Since the SubplanStage does not benefit from the CachedPlanStage's replanning, it should not create
a cache entry if there is a plan ranking tie or if zero results are produced during the plan ranking
trial period.